--- a/package.json
+++ b/package.json
@@ -27,7 +27,13 @@
   ],
   "devDependencies": {
     "grunt-contrib-jshint": "~0.2.0",
-    "grunt-contrib-nodeunit": "~0.1.2",
-    "grunt-contrib-watch": "~0.2.0"
+    "grunt-contrib-watch": "~0.2.0",
+    "chai": "~1.7.2",
+    "sinon": "~1.7.3",
+    "sinon-chai": "~2.4.0",
+    "mocha": "~1.12.1"
+  },
+  "scripts": {
+    "test": "mocha"
   }
 }
