--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,8 @@ language: node_js
 node_js:
   - '0.10'
   - '0.8'
+notifications:
+  irc: "irc.freenode.org#aerogear"
+branches:
+  only:
+    - master
