--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "url": "http://aerogear.org"
   },
   "main": "lib/unifiedpush-node-sender",
+  "bin": {
+    "unifiedpush-node-sender": "./bin/cli.js"
+  },
   "maintainers": {
     "name": "Lucas Holmquist",
     "email": "lholmqui@redhat.com"
@@ -34,5 +37,8 @@
   },
   "scripts": {
     "test": "mocha"
+  },
+  "dependencies": {
+    "nopt": "~2.2.0"
   }
 }
