--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "type": "git",
     "url": "git@github.com:aerogear/aerogear-unifiedpush-nodejs-client.git"
   },
+  "engines": {
+    "node": ">= 0.10.0"
+  },
   "bugs": {
     "url": "https://issues.jboss.org/browse/AGPUSH"
   },
