--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "unifiedpush-node-sender",
-  "version": "0.8.0",
+  "version": "0.9.0-dev",
   "description": "Sender api for the AeroGear Unified Push server",
   "homepage": "https://github.com/aerogear/aerogear-unifiedpush-nodejs-client",
   "author": {
@@ -20,7 +20,7 @@
     "node": ">= 0.10.0"
   },
   "bugs": {
-    "url": "https://issues.jboss.org/browse/AGPUSH"
+    "url": "https://issues.jboss.org/browse/AGJS"
   },
   "licenses": [
     {
