--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: node_js
 node_js:
-  - '0.10'
+  - "5"
+script:
+  - npm run ci
 notifications:
   irc: "irc.freenode.org#aerogear"
 branches:
