--- a/package.json
+++ b/package.json
@@ -44,7 +44,10 @@
     "coverage": "./node_modules/.bin/istanbul cover tape -- test/*-test.js",
     "coveralls": "npm run coverage && cat ./coverage/lcov.info | coveralls",
     "ci": "npm run lint && npm run coveralls",
-    "docs": "./node_modules/.bin/jsdoc --verbose -d docs -t ./node_modules/ink-docstrap/template -R README.md index.js ./lib/sender.js ./lib/unifiedpush-node-sender.js"
+    "docs": "./node_modules/.bin/jsdoc --verbose -d docs -t ./node_modules/ink-docstrap/template -R README.md index.js ./lib/sender.js ./lib/unifiedpush-node-sender.js",
+    "release:prep": "./scripts/prepareRelease.sh",
+    "release:validate": "./scripts/validateRelease.sh",
+    "publish": "./scripts/publishRelease.sh"
   },
   "dependencies": {
     "request": "^2.88.0"
