--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,16 @@
-version: 2
+version: 2.1
+commands:
+  publish:
+    parameters:
+      tag:
+        type: string
+    steps:
+        # Allows us to authenticate with the npm registry
+      - run: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/.npmrc
+      - run: CI=true npm run release:prep
+      - run: TAG=<< parameters.tag >> npm run release:validate
+      - run: TAG=<< parameters.tag >> npm run publish:release
+
 jobs:
   test-node-4:
     working_directory: ~/aerogear
@@ -75,15 +87,22 @@ jobs:
   npm_publish:
     working_directory: ~/aerogear
     docker:
-      # Node 8 LTS
       - image: circleci/node:lts
     steps:
       - checkout
-        # Allows us to authenticate with the npm registry
-      - run: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/.npmrc
-      - run: CI=true npm run release:prep
-      - run: TAG=$CIRCLE_TAG npm run release:validate
-      - run: TAG=$CIRCLE_TAG npm run publish
+      - publish:
+          tag: "$CIRCLE_TAG"
+  npm_publish_master:
+    working_directory: ~/aerogear
+    docker:
+      - image: circleci/node:lts
+    steps:
+      - checkout
+      - run:
+          name: version packages
+          command: npm run version:master
+      - publish:
+          tag: "$(node -e \"console.log(require('./package.json').version);\")"
 
 workflows:
   version: 2
@@ -116,3 +135,12 @@ workflows:
               only: /.*/ # allow anything because tag syntax is validated as part of validate-release.sh
             branches:
               ignore: /.*/
+      - npm_publish_master:
+          requires:
+            - test-node-4
+            - test-node-6
+            - test-node-8
+            - test-node-10
+          filters:
+            branches:
+              only: master
